Регистрация и вход. Стили шрифтов. Ссылки.

--- a/html/login.html
+++ b/html/login.html
@@ -29,7 +29,7 @@
 
     <main>
       <section class="main_container">
-            <div class="enter_text">Регистрация</div>
+            <div class="enter_text">Войти в аккаунт</div>
             <div class="input_email">
                 <div class="data_text">Введите email</div>
                 <input class="enter_data_field"></input>
@@ -38,10 +38,11 @@
                 <div class="data_text">Введите пароль</div>
                 <input class="enter_data_field"></input>
             </div>
-            <button class="reg_button">Зарегистрироваться</button>
+            <button class="forget_password">Забыл пароль</button>
+            <button class="eneter_button">Войти</button>
             <div class="no_profile_container">
-                <div class="no_profile_text">Есть профиль?</div>
-                <button onclick="window.location.href='login.html'" class="registration_button">Войти</button>
+                <div class="no_profile_text">Нет профиля?</div>
+                <button onclick="window.location.href='registration.html'" class="registration_button">Зарегистрироваться</button>
             </div>
       </section>
     </main>
