--- a/html/profile.html
+++ b/html/profile.html
@@ -19,7 +19,7 @@
           <a href="#" class="header_menu_link">Главная</a>
           <a href="#" class="header_menu_link">Курсы</a>
           <a href="#" class="header_menu_link">О нас</a>
-          <a href="#" class="header_menu_link reg_btn">Регистрация</a>
+          <a onclick="window.location.href='registration.html'" href="#" class="header_menu_link reg_btn">Регистрация</a>
         </div>
       </section>
     </header>
