Добавлены слайдеры и выбор типов курсов

--- a/html/main_page.html
+++ b/html/main_page.html
@@ -36,56 +36,128 @@
     <main>
 
       <div class="course_type_container">
-        <ul id="course_type_list" class="course_list">
-          <li>Программирование</li>
-          <li>Создание игр</li>
-          <li>Digital - искусство</li>
-          <li>Досуг</li>
+        <ul class="course_list">
+          <li class="course-type-btn course_type_btn_active">Программирование</li>
+          <li class="course-type-btn">Создание игр</li>
+          <li class="course-type-btn">Digital - искусство</li>
+          <li class="course-type-btn">Досуг</li>
         </ul>
       </div>
       <div class="course_age_container">
         <ul class="course_list">
-          <li>6+</li>
-          <li>7+</li>
-          <li>9+</li>
-          <li>10+</li>
-          <li>12+</li>
-          <li>14+</li>
+          <li class="course-age-btn course_age_btn_active">6+</li>
+          <li class="course-age-btn">7+</li>
+          <li class="course-age-btn">9+</li>
+          <li class="course-age-btn">10+</li>
+          <li class="course-age-btn">12+</li>
+          <li class="course-age-btn">14+</li>
         </ul>
       </div>
 
       <div class="courses_container">
-        <div class="course_card">
-          <img class="course_card_img" src="../img/Frame 1908.png"/>
-          <div class="course_description_container">
-            <div class="course_card_name">Scrath</div>
-            <div class="course_card_description">Визуальная среда программирования, которая позволяет детям создавать собственные анимированные интерактивные игры и проекты.</div>
+        <div id="coursesLine" class="courses-line">
+          <div class="course_card">
+            <img class="course_card_img" src="../img/Frame 1908.png"/>
+            <div class="course_description_container">
+              <div class="course_card_name">Scrath</div>
+              <div class="course_card_description">Визуальная среда программирования, которая позволяет детям создавать собственные анимированные интерактивные игры и проекты.</div>
+            </div>
           </div>
-        </div>
-        <div class="course_card">
-          <img class="course_card_img" src="../img/Frame 1909.png"/>
-          <div class="course_description_container">
-            <div class="course_card_name">HTML + CSS + JavaScript</div>
-            <div class="course_card_description">Создание динамической страницы сайта. Научим программированию.</div>
+          <div class="course_card">
+            <img class="course_card_img" src="../img/Frame 1909.png"/>
+            <div class="course_description_container">
+              <div class="course_card_name">HTML + CSS + JavaScript</div>
+              <div class="course_card_description">Создание динамической страницы сайта. Научим программированию.</div>
+            </div>
           </div>
-        </div>
-        <div class="course_card">
-          <img class="course_card_img" src="../img/Frame 1910.png"/>
-          <div class="course_description_container">
-            <div class="course_card_name">Python Start</div>
-            <div class="course_card_description">Язык программирования, входящий в топ-10 самых востребованных языков программирования.  Используется при создании сайтов и приложений.</div>
+          <div class="course_card">
+            <img class="course_card_img" src="../img/Frame 1910.png"/>
+            <div class="course_description_container">
+              <div class="course_card_name">Python Start</div>
+              <div class="course_card_description">Язык программирования, входящий в топ-10 самых востребованных языков программирования.  Используется при создании сайтов и приложений.</div>
+            </div>
           </div>
-        </div>
-        <div class="course_card">
-          <img class="course_card_img" src="../img/Frame 1911.png"/>
-          <div class="course_description_container">
-            <div class="course_card_name">PHP</div>
-            <div class="course_card_description">Интерпретируемый язык программирования общего назначения, работающий на серверной стороне. Используется во всех сферах IT.</div>
+          <div class="course_card">
+            <img class="course_card_img" src="../img/Frame 1911.png"/>
+            <div class="course_description_container">
+              <div class="course_card_name">PHP</div>
+              <div class="course_card_description">Интерпретируемый язык программирования общего назначения, работающий на серверной стороне. Используется во всех сферах IT.</div>
+            </div>
+          </div>
+          <div class="course_card">
+            <img class="course_card_img" src="../img/Frame 1911.png"/>
+            <div class="course_description_container">
+              <div class="course_card_name">test1</div>
+              <div class="course_card_description">Интерпретируемый язык программирования общего назначения, работающий на серверной стороне. Используется во всех сферах IT.</div>
+            </div>
+          </div>
+          <div class="course_card">
+            <img class="course_card_img" src="../img/Frame 1911.png"/>
+            <div class="course_description_container">
+              <div class="course_card_name">test2</div>
+              <div class="course_card_description">Интерпретируемый язык программирования общего назначения, работающий на серверной стороне. Используется во всех сферах IT.</div>
+            </div>
+          </div>
+          <div class="course_card">
+            <img class="course_card_img" src="../img/Frame 1911.png"/>
+            <div class="course_description_container">
+              <div class="course_card_name">test3</div>
+              <div class="course_card_description">Интерпретируемый язык программирования общего назначения, работающий на серверной стороне. Используется во всех сферах IT.</div>
+            </div>
+          </div>
+          <div class="course_card">
+            <img class="course_card_img" src="../img/Frame 1911.png"/>
+            <div class="course_description_container">
+              <div class="course_card_name">test4</div>
+              <div class="course_card_description">Интерпретируемый язык программирования общего назначения, работающий на серверной стороне. Используется во всех сферах IT.</div>
+            </div>
+          </div>
+          <div class="course_card">
+            <img class="course_card_img" src="../img/Frame 1911.png"/>
+            <div class="course_description_container">
+              <div class="course_card_name">test5</div>
+              <div class="course_card_description">Интерпретируемый язык программирования общего назначения, работающий на серверной стороне. Используется во всех сферах IT.</div>
+            </div>
+          </div>
+          <div class="course_card">
+            <img class="course_card_img" src="../img/Frame 1911.png"/>
+            <div class="course_description_container">
+              <div class="course_card_name">test6</div>
+              <div class="course_card_description">Интерпретируемый язык программирования общего назначения, работающий на серверной стороне. Используется во всех сферах IT.</div>
+            </div>
+          </div>
+          <div class="course_card">
+            <img class="course_card_img" src="../img/Frame 1911.png"/>
+            <div class="course_description_container">
+              <div class="course_card_name">test7</div>
+              <div class="course_card_description">Интерпретируемый язык программирования общего назначения, работающий на серверной стороне. Используется во всех сферах IT.</div>
+            </div>
+          </div>
+          <div class="course_card">
+            <img class="course_card_img" src="../img/Frame 1911.png"/>
+            <div class="course_description_container">
+              <div class="course_card_name">test8</div>
+              <div class="course_card_description">Интерпретируемый язык программирования общего назначения, работающий на серверной стороне. Используется во всех сферах IT.</div>
+            </div>
+          </div>
+          <div class="course_card">
+            <img class="course_card_img" src="../img/Frame 1911.png"/>
+            <div class="course_description_container">
+              <div class="course_card_name">test9</div>
+              <div class="course_card_description">Интерпретируемый язык программирования общего назначения, работающий на серверной стороне. Используется во всех сферах IT.</div>
+            </div>
           </div>
         </div>
       </div>
 
-      <div class="idk_what_is_that"></div>
+      <div class="slider_btns_line">
+        <ul class="slider_btn_list">
+          <li class="slider_btn slider_btn_active"></li>
+          <li class="slider_btn"></li>
+          <li class="slider_btn"></li>
+          <li class="slider_btn"></li>
+        </ul>
+      </div>
 
       <div class="benefits_cards_container">
         <div class="benefit_card">
