--- a/html/main_page.html
+++ b/html/main_page.html
@@ -24,124 +24,124 @@
           <a href="#" class="header_menu_link">Главная</a>
           <a href="#" class="header_menu_link">Курсы</a>
           <a href="#" class="header_menu_link">О нас</a>
-          <a onclick="window.location.href='registration.html'" href="#" class="header_menu_link reg_btn">Регистрация</a>
+          <a href="registration.html" class="header_menu_link reg_btn">Регистрация</a>
         </div>
       </section>
     </header>
     <div class="upper_section">
       <h1 class="upper_text">Учим программированию, созданию игр, digital - искусству и полезным вещам IT.</h1>
-      <div class="woman_img"></div>
+      <img class="woman_img" src="../img/online_meetings.png"  alt="woman">
     </div>
 
     <main>
 
       <div class="course_type_container">
         <ul class="course_list">
-          <li class="course-type-btn course_type_btn_active">Программирование</li>
-          <li class="course-type-btn">Создание игр</li>
-          <li class="course-type-btn">Digital - искусство</li>
-          <li class="course-type-btn">Досуг</li>
+          <li class="course_type_btn course_type_btn_active">Программирование</li>
+          <li class="course_type_btn">Создание игр</li>
+          <li class="course_type_btn">Digital - искусство</li>
+          <li class="course_type_btn">Досуг</li>
         </ul>
       </div>
       <div class="course_age_container">
         <ul class="course_list">
-          <li class="course-age-btn course_age_btn_active">6+</li>
-          <li class="course-age-btn">7+</li>
-          <li class="course-age-btn">9+</li>
-          <li class="course-age-btn">10+</li>
-          <li class="course-age-btn">12+</li>
-          <li class="course-age-btn">14+</li>
+          <li class="course_age_btn course_age_btn_active">6+</li>
+          <li class="course_age_btn">7+</li>
+          <li class="course_age_btn">9+</li>
+          <li class="course_age_btn">10+</li>
+          <li class="course_age_btn">12+</li>
+          <li class="course_age_btn">14+</li>
         </ul>
       </div>
 
       <div class="courses_container">
         <div id="coursesLine" class="courses-line">
           <div class="course_card">
-            <img class="course_card_img" src="../img/Frame 1908.png"/>
+            <img class="course_card_img" src="../img/Frame 1908.png" alt="Scratch"/>
             <div class="course_description_container">
               <div class="course_card_name">Scrath</div>
               <div class="course_card_description">Визуальная среда программирования, которая позволяет детям создавать собственные анимированные интерактивные игры и проекты.</div>
             </div>
           </div>
           <div class="course_card">
-            <img class="course_card_img" src="../img/Frame 1909.png"/>
+            <img class="course_card_img" src="../img/Frame 1909.png" alt="HTML + CSS + JavaScript"/>
             <div class="course_description_container">
               <div class="course_card_name">HTML + CSS + JavaScript</div>
               <div class="course_card_description">Создание динамической страницы сайта. Научим программированию.</div>
             </div>
           </div>
           <div class="course_card">
-            <img class="course_card_img" src="../img/Frame 1910.png"/>
+            <img class="course_card_img" src="../img/Frame 1910.png" alt="Python Start"/>
             <div class="course_description_container">
               <div class="course_card_name">Python Start</div>
               <div class="course_card_description">Язык программирования, входящий в топ-10 самых востребованных языков программирования.  Используется при создании сайтов и приложений.</div>
             </div>
           </div>
           <div class="course_card">
-            <img class="course_card_img" src="../img/Frame 1911.png"/>
+            <img class="course_card_img" src="../img/Frame 1911.png" alt="PHP"/>
             <div class="course_description_container">
               <div class="course_card_name">PHP</div>
               <div class="course_card_description">Интерпретируемый язык программирования общего назначения, работающий на серверной стороне. Используется во всех сферах IT.</div>
             </div>
           </div>
           <div class="course_card">
-            <img class="course_card_img" src="../img/Frame 1911.png"/>
+            <img class="course_card_img" src="../img/Frame 1911.png" alt="test1"/>
             <div class="course_description_container">
               <div class="course_card_name">test1</div>
               <div class="course_card_description">Интерпретируемый язык программирования общего назначения, работающий на серверной стороне. Используется во всех сферах IT.</div>
             </div>
           </div>
           <div class="course_card">
-            <img class="course_card_img" src="../img/Frame 1911.png"/>
+            <img class="course_card_img" src="../img/Frame 1911.png" alt="test2"/>
             <div class="course_description_container">
               <div class="course_card_name">test2</div>
               <div class="course_card_description">Интерпретируемый язык программирования общего назначения, работающий на серверной стороне. Используется во всех сферах IT.</div>
             </div>
           </div>
           <div class="course_card">
-            <img class="course_card_img" src="../img/Frame 1911.png"/>
+            <img class="course_card_img" src="../img/Frame 1911.png" alt="test3"/>
             <div class="course_description_container">
               <div class="course_card_name">test3</div>
               <div class="course_card_description">Интерпретируемый язык программирования общего назначения, работающий на серверной стороне. Используется во всех сферах IT.</div>
             </div>
           </div>
           <div class="course_card">
-            <img class="course_card_img" src="../img/Frame 1911.png"/>
+            <img class="course_card_img" src="../img/Frame 1911.png" alt="test4"/>
             <div class="course_description_container">
               <div class="course_card_name">test4</div>
               <div class="course_card_description">Интерпретируемый язык программирования общего назначения, работающий на серверной стороне. Используется во всех сферах IT.</div>
             </div>
           </div>
           <div class="course_card">
-            <img class="course_card_img" src="../img/Frame 1911.png"/>
+            <img class="course_card_img" src="../img/Frame 1911.png" alt="test5"/>
             <div class="course_description_container">
               <div class="course_card_name">test5</div>
               <div class="course_card_description">Интерпретируемый язык программирования общего назначения, работающий на серверной стороне. Используется во всех сферах IT.</div>
             </div>
           </div>
           <div class="course_card">
-            <img class="course_card_img" src="../img/Frame 1911.png"/>
+            <img class="course_card_img" src="../img/Frame 1911.png" alt="test6"/>
             <div class="course_description_container">
               <div class="course_card_name">test6</div>
               <div class="course_card_description">Интерпретируемый язык программирования общего назначения, работающий на серверной стороне. Используется во всех сферах IT.</div>
             </div>
           </div>
           <div class="course_card">
-            <img class="course_card_img" src="../img/Frame 1911.png"/>
+            <img class="course_card_img" src="../img/Frame 1911.png" alt="test7"/>
             <div class="course_description_container">
               <div class="course_card_name">test7</div>
               <div class="course_card_description">Интерпретируемый язык программирования общего назначения, работающий на серверной стороне. Используется во всех сферах IT.</div>
             </div>
           </div>
           <div class="course_card">
-            <img class="course_card_img" src="../img/Frame 1911.png"/>
+            <img class="course_card_img" src="../img/Frame 1911.png" alt="test8"/>
             <div class="course_description_container">
               <div class="course_card_name">test8</div>
               <div class="course_card_description">Интерпретируемый язык программирования общего назначения, работающий на серверной стороне. Используется во всех сферах IT.</div>
             </div>
           </div>
           <div class="course_card">
-            <img class="course_card_img" src="../img/Frame 1911.png"/>
+            <img class="course_card_img" src="../img/Frame 1911.png" alt="test9"/>
             <div class="course_description_container">
               <div class="course_card_name">test9</div>
               <div class="course_card_description">Интерпретируемый язык программирования общего назначения, работающий на серверной стороне. Используется во всех сферах IT.</div>
@@ -179,38 +179,38 @@
 
       <div class="test_container">
         <div class="test_container_left">
-          <h2 class="h2_test">Не знаете, какой курс вам подходит?</h2>
-          <h3 class="h3_test" >Мы поможем выбрать курс на основе результата теста</h3>
+          <div class="text1_test">Не знаете, какой курс вам подходит?</div>
+          <div class="text2_test" >Мы поможем выбрать курс на основе результата теста</div>
           <div class="see_test_btn">Пройти тест</div>
         </div>
         <img class="test_img" src="../img/Rectangle 5.png"/>
       </div>
 
-      <h1 class="benefits">Преимущества</h1>
+      <div class="benefits">Преимущества</div>
 
       <div class="benefits_container">
-        <h1 class="benefits_header">01</h1>
-        <h2 class="benefits_desc">Возможность учиться онлайн</h2>
+        <div class="benefits_header">01</div>
+        <div class="benefits_desc">Возможность учиться онлайн</div>
       </div>
       <div class="flex_container">
         <div class="benefits_container_small">
-          <h1 class="benefits_header">02</h1>
-          <h2 class="benefits_desc">Собственная система обучения</h2>
+          <div class="benefits_header">02</div>
+          <div class="benefits_desc">Собственная система обучения</div>
         </div>
         <div class="benefits_container_small">
-          <h1 class="benefits_header">03</h1>
-          <h2 class="benefits_desc">Обратная связь от преподователей</h2>
+          <div class="benefits_header">03</div>
+          <div class="benefits_desc">Обратная связь от преподователей</div>
         </div>
     </div>
     <div class="review_section">
-      <h1 class="rewiews">Отзывы</h1>
+      <div class="reviews">Отзывы</div>
       <div class="flex_container">
         <div class="review_card">
           <div class="reviewer_photo"></div>
           <div class="reviewer_inf_container">
             <div class="reviewer_name">Андрей Петрович</div>
             <div class="reviewer_course">Scrath</div>
-            <div class="reviewer_rewie">Курс замечательный! Многое попробовали и научились практическим навыкам</div>
+            <div class="reviewer_reviwe">Курс замечательный! Многое попробовали и научились практическим навыкам</div>
           </div>
         </div>
         <div class="review_card">
@@ -218,7 +218,7 @@
           <div class="reviewer_inf_container">
             <div class="reviewer_name">Андрей Петрович</div>
             <div class="reviewer_course">Python Start</div>
-            <div class="reviewer_rewie">Очень подробно и интересно рассказывают материал, всё понравилось!</div>
+            <div class="reviewer_reviwe">Очень подробно и интересно рассказывают материал, всё понравилось!</div>
           </div>
         </div>
         <div class="review_card">
@@ -226,7 +226,7 @@
           <div class="reviewer_inf_container">
             <div class="reviewer_name">Андрей Петрович</div>
             <div class="reviewer_course">Веб - программирование</div>
-            <div class="reviewer_rewie">Отличные преподователи, удобная система обучения, качество хорошее</div>
+            <div class="reviewer_reviwe">Отличные преподователи, удобная система обучения, качество хорошее</div>
           </div>
         </div>
         <div class="review_card">
@@ -234,7 +234,7 @@
           <div class="reviewer_inf_container">
             <div class="reviewer_name">Андрей Петрович</div>
             <div class="reviewer_course">Веб - программирование</div>
-            <div class="reviewer_rewie">Большой выбор курсов и хорошие цены. Вежливые менеджеры и преподователи</div>
+            <div class="reviewer_reviwe">Большой выбор курсов и хорошие цены. Вежливые менеджеры и преподователи</div>
           </div>
         </div>
       </div>
@@ -245,7 +245,7 @@
     <footer>
       <section class="footer">
         <div class="footer_box">
-          <h2 class="footer_box_title h2 text2">Информация</h2>
+          <div class="footer_box_title div text2">Информация</div>
           <ul class="footer_box_list">
             <li class="footer_box_list_item text2">
               <a class="footer_box_list_item_link text2" href="#">Главная</a>
@@ -265,14 +265,14 @@
         </div>
 
         <div class="footer_box">
-          <h2 class="footer_box_title h2 text2">Местоположение</h2>
+          <div class="footer_box_title div text2">Местоположение</div>
           <div class="footer_box_gps">
             <img class="footer_box_gps_img" src="../img/gps.png" alt="gps" />
           </div>
         </div>
 
         <div class="footer_box">
-          <h2 class="footer_box_title h2 text2">Контакты</h2>
+          <div class="footer_box_title div text2">Контакты</div>
           <ul class="footer_box_list">
             <li class="footer_box_list_item">
               <a class="footer_box_list_item_link text2" href="#">instagram</a>
