--- a/html/login.html
+++ b/html/login.html
@@ -20,10 +20,10 @@
         </div>
 
         <div class="header_menu">
-          <a href="#" class="header_menu_link">Главная</a>
+          <a href="main_page.html" class="header_menu_link">Главная</a>
           <a href="#" class="header_menu_link">Курсы</a>
           <a href="#" class="header_menu_link">О нас</a>
-          <a onclick="window.location.href='registration.html'" href="#" class="header_menu_link reg_btn">Регистрация</a>
+          <a href="registration.html" class="header_menu_link reg_btn">Регистрация</a>
         </div>
       </section>
     </header>
@@ -33,19 +33,19 @@
             <div class="enter_text">Войти в аккаунт</div>
             <div class="input_email">
                 <div class="data_text">Введите email</div>
-                <input id="email_field" class="enter_data_field"></input>
+                <input name="login" type="email" id="email_field" class="enter_data_field">
             </div>
             <div id="error_email_text" class="error_text">Для входа необходим корректный email</div>
             <div class="input_password">
                 <div class="data_text">Введите пароль</div>
-                <input id="password_field" class="enter_data_field"></input>
+                <input name="password" type="password" id="password_field" class="enter_data_field">
             </div>
             <div id="error_password_text" class="error_text">Пароль неверный или введен неправильно</div>
             <button class="forget_password">Забыл пароль</button>
             <button id="enter_button" class="enter_button">Войти</button>
             <div class="no_profile_container">
                 <div class="no_profile_text">Нет профиля?</div>
-                <button onclick="window.location.href='registration.html'" class="registration_button">Зарегистрироваться</button>
+                <a href='registration.html' class="registration_button">Зарегистрироваться</a> 
             </div>
       </section>
     </main>
@@ -65,7 +65,7 @@
               <a class="footer_box_list_item_link text2" href="#">О нас</a>
             </li>
             <li class="footer_box_list_item">
-              <a onclick="window.location.href='profile.html'" class="footer_box_list_item_link text2" href="#"
+              <a class="footer_box_list_item_link text2" href="profile.html"
                 >Личный кабинет</a
               >
             </li>
