--- a/html/headerM&footer.html
+++ b/html/headerM&footer.html
@@ -11,18 +11,20 @@
 </head>
 
 <body>
-    <header class="header">
-        <div class="header_logo">
-            <img src="../img/LogoNB.png" alt="Logo" class="logo_image">
-        </div>
-
-        <div class="header_menu">
-            <a href="#" class="header_menu_link">Главная</a>
-            <a href="#" class="header_menu_link">Курсы</a>
+    <header>
+        <section class="header">
+          <div class="header_logo">
+            <img class="header_logo_img" src="../img/LogoNB.png" alt="logo" />
+          </div>
+  
+          <div class="header_menu">
+            <a href="../html/main_page.html" class="header_menu_link">Главная</a>
+            <a href="../html/courses.html" class="header_menu_link">Курсы</a>
             <a href="#" class="header_menu_link">О нас</a>
-            <a href="#" class="header_menu_link log_btn">Вход</a>
-        </div>
-    </header>
+            <a href="../html/registration.html" class="header_menu_link reg_btn">Регистрация</a>
+          </div>
+        </section>
+      </header>
 
     <footer class="footer">
         <div class="footer_box">
@@ -45,7 +47,8 @@
         <div class="footer_box">
             <h3 class="footer_box_subtitle">По любым вопросам звоните или пишите в техническую поддержку.</h3>
             <ol class="footer_box_list">
-                <li><a href="https://vk.com/cyberclass_volok" class="footer_box_list_item"><img src="" alt="Vk"></a></li>
+                <li><a href="https://vk.com/cyberclass_volok" class="footer_box_list_item"><img src="" alt="Vk"></a>
+                </li>
                 <li><a href="№" class="footer_box_list_item"><img src="" alt="Instagram"></a></li>
             </ol>
         </div>
