--- a/html/LMS_current_courses.html
+++ b/html/LMS_current_courses.html
@@ -6,33 +6,28 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Document</title>
-  <link rel="stylesheet" href="./LMS_Main.css" />
+  <link rel="stylesheet" href="../css/LMS_Main.css" />
+  <link rel="stylesheet" href="../css/fonts.css">
+  <link rel="stylesheet" href="../css/header&footer.css">
 </head>
 
 <body>
 
   <!-- HEADER -->
 
-  <header class="header">
+  <header>
+    <section class="header">
+      <div class="header_logo">
+        <img class="header_logo_img" src="../img/LogoNB.png" alt="logo" />
+      </div>
 
-    <div id="main_menu" class="main_menu">
-
-      <button class="menu_btn b1" onclick="window.location.href='LMS_Main.html'">Главная</button>
-      <button class="menu_btn b2">О нас</button>
-      <button class="menu_btn b2" onclick="window.location.href='LMS_Courses.html'">Курсы</button>
-      <button class="menu_btn b2">Классы</button>
-    </div>
-
-
-
-    <div class="up2">
-      <button class="menu_btn b4" onclick="window.location.href='LMS_Profile.html'">
-        Мой аккаунт
-      </button>
-    </div>
-
-
-
+      <div class="header_menu">
+        <a href="../html/main_page.html" class="header_menu_link">Главная</a>
+        <a href="../html/courses.html" class="header_menu_link">Курсы</a>
+        <a href="#" class="header_menu_link">О нас</a>
+        <a href="../html/registration.html" class="header_menu_link reg_btn">Регистрация</a>
+      </div>
+    </section>
   </header>
 
   <!-- HEADER -->
