--- a/html/newProfile.html
+++ b/html/newProfile.html
@@ -7,31 +7,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="../css/newProfile.css">
-    <!-- <link rel="stylesheet" href="../css/header&footer!.css"> -->
+    <link rel="stylesheet" href="../css/headerS&footer.css">
     <link rel="stylesheet" href="../css/fonts.css">
 </head>
 
 <body>
     <header class="header">
-        <div class="header_logo">
-            <img src="../img/LogoNB.png" alt="Logo" />
-        </div>
+        <div class="header_container">
+            <!-- <div class="header_logo">
+                <img src="../img/LogoNB.png" alt="Logo" />
+            </div> -->
 
-        <div class="header_search">
-            <input type="text" placeholder="Search" />
-            <img src="../img/Search.png" alt="Search">
+            <div class="header_search">
+                <input type="text" placeholder="Search" />
+                <img src="../img/Search.png" alt="Search">
+            </div>
         </div>
     </header>
 
     <main class="main">
         <section class="info">
             <div class="info_menu">
-                <a class="info_menu_item heading" href="#">Личный кабинет</a>
-                <a class="info_menu_item heading" href="#">Занятия</a>
-                <a class="info_menu_item heading" href="#">Домашнее задание</a>
-                <a class="info_menu_item heading" href="#">Чаты</a>
-                <a class="info_menu_item heading" href="#">Выбрать курс</a>
-                <a class="info_menu_item heading" href="#">Выход</a>
+                <div class="info_menu_item">
+                    <img src="../img/profile.png" alt="Profile">
+                    <a class="info_menu_item_link" href="#">Личный кабинет</a>
+                </div>
+
+                <div class="info_menu_item">
+                    <img src="../img/designtools.png" alt="Lessons">
+                    <a class="info_menu_item_link" href="#">Занятия</a>
+                </div>
+
+                <div class="info_menu_item">
+                    <img src="../img/documenttext.png" alt="Homework">
+                    <a class="info_menu_item_link" href="#">Домашнее задание</a>
+                </div>
+
+                <div class="info_menu_item">
+                    <img src="../img/notification1.png" alt="Chats">
+                    <a class="info_menu_item_link" href="#">Чаты</a>
+                </div>
+
+                <div class="info_menu_item">
+                    <img src="../img/box1.png" alt="Choose a course">
+                    <a class="info_menu_item_link" href="#">Выбрать курс</a>
+                </div>
+
+                <div class="info_menu_item">
+                    <img src="../img/logoutcurve.png" alt="">
+                    <a class="info_menu_item_link" href="#">Выход</a>
+                </div>
             </div>
 
             <div class="info_person">
@@ -41,14 +66,12 @@
                     </div>
 
                     <div class="info_person_box_content">
-                        <h1 heading>Пётр Петрович</h1>
+                        <h1 class="heading">Пётр Петрович</h1>
                         <p>Возвраст: 19</p>
                         <p>Актуальные курсы: Курс: Разработчик</p>
                         <div class="info_person_box_content_action">
                             <p>Информация о курсе</p>
-                            <button>
-                                <img src="../img/Intersect.png" alt="Intersect">
-                            </button>
+                            <img src="../img/Chevron_right.png" alt="Chevron">
                         </div>
 
                     </div>
@@ -56,7 +79,7 @@
 
 
                 <div class="info_progress">
-                    <p heading>78%</p>
+                    <p class="heading">78%</p>
                 </div>
             </div>
         </section>
@@ -66,19 +89,19 @@
                 <h2 class="courses_title heading">Актуальные курсы</h2>
                 <div class="courses">
                     <div class="course_box">
-                        <div class="course_box_item">
-                            <img src="../img/courses_img.png" alt="Course" class="course__box_image" />
+                        <div onclick="window.location.href='LMS_current_courses.html'" class="course_box_item">
+                            <img src="../img/scratch1.png" alt="Course" class="course__box_image" />
                         </div>
 
-                        <h3 class="course_box_title">Scrath</h3>
+                        <h3 class="course_box_title">Scratch</h3>
                     </div>
 
                     <div class="course_box">
-                        <div class="course_box_item">
-                            <img src="../img/courses_img.png" alt="Course" class="course__box_image" />
+                        <div onclick="window.location.href='LMS_current_courses.html'" class="course_box_item">
+                            <img src="../img/python.png" alt="Course" class="course__box_image" />
                         </div>
 
-                        <h3 class="course_box_title">Scrath</h3>
+                        <h3 class="course_box_title">Python Start</h3>
                     </div>
                 </div>
             </div>
@@ -87,64 +110,57 @@
                 <h2 class="courses_title heading">Пройденные курсы</h2>
                 <div class="courses">
                     <div class="course_box">
-                        <div class="course_box_item">
-                            <img src="../img/courses_img.png" alt="Course" class="course__box_image" />
+                        <div onclick="window.location.href='LMS_current_courses.html'" class="course_box_item">
+                            <img src="../img/scratch2.png" alt="Course" class="course__box_image" />
                         </div>
 
                         <h3 class="course_box_title">Scrath</h3>
                     </div>
 
                     <div class="course_box">
-                        <div class="course_box_item">
-                            <img src="../img/courses_img.png" alt="Course" class="course__box_image" />
+                        <div onclick="window.location.href='LMS_current_courses.html'" class="course_box_item">
+                            <img src="../img/php.png" alt="Course" class="course__box_image" />
                         </div>
 
-                        <h3 class="course_box_title">Scrath</h3>
+                        <h3 class="course_box_title">PHP</h3>
                     </div>
                 </div>
             </div>
         </section>
     </main>
 
-    <footer>
-        <section class="footer">
-            <div class="footer_box">
-                <h2 class="footer_box_title h2 text2 heading">Информация</h2>
-                <ul class="footer_box_list">
-                    <li class="footer_box_list_item text2">
-                        <a class="footer_box_list_item_link text2" href="../html/main_page.html">Главная</a>
-                    </li>
-                    <li class="footer_box_list_item">
-                        <a class="footer_box_list_item_link text2" href="#">Курсы</a>
-                    </li>
-                    <li class="footer_box_list_item">
-                        <a class="footer_box_list_item_link text2" href="#">О нас</a>
-                    </li>
-                    <li class="footer_box_list_item">
-                        <a class="footer_box_list_item_link text2" href="#">Личный кабинет</a>
-                    </li>
-                </ul>
-            </div>
+    <footer class="footer">
+        <div class="footer_box">
+            <h2 class="footer_box_title">Информация</h2>
+            <ol class="footer_box_list">
+                <li><a href="../html/main_page.html" class="footer_box_list_item">Главная</a></li>
+                <li><a href="../html/courses.html" class="footer_box_list_item">Курсы</a></li>
+                <li><a href="#" class="footer_box_list_item">О нас</a></li>
+                <li><a href="../html/newProfile.html" class="footer_box_list_item">Личный кабинет</a></li>
+            </ol>
+        </div>
 
-            <div class="footer_box">
-                <h2 class="footer_box_title h2 text2 heading">Местоположение</h2>
-                <div class="footer_box_gps">
-                    <img class="footer_box_gps_img" src="../img/gps.png" alt="gps" />
-                </div>
-            </div>
+        <div class="footer_box">
+            <h2 class="footer_box_title">Контакты</h2>
+            <ol class="footer_box_list">
+                <li><a href="https://yandex.ru/maps/?um=constructor%3Ad499c2ffbb5ed73d0561099773c2f551dccfb4a15d0237d275bd69397c24c2f4&source=constructorLink"
+                        class="footer_box_list_item footer_navigate"><img src="../img/gps.png" alt="Navigate"></a></li>
+            </ol>
+        </div>
 
-            <div class="footer_box">
-                <h2 class="footer_box_title h2 text2 heading">Контакты</h2>
-                <ul class="footer_box_list">
-                    <li class="footer_box_list_item">
-                        <a class="footer_box_list_item_link text2" href="#">instagram</a>
-                    </li>
-                    <li class="footer_box_list_item">
-                        <a class="footer_box_list_item_link text2" href="https://vk.com/cyberclass_volok">vk</a>
-                    </li>
-                </ul>
+        <div class="footer_box footer_info">
+            <p class="footer_info_subtitle">По любым вопросам звоните или пишите в техническую поддержку.</p>
+            <p class="footer_info_text">
+                Наш адрес: <br>
+                Школьная улица, 9А, Волоколамск, Московская область
+            </p>
+            <div class="footer_info_box">
+                <a href="https://vk.com/cyberclass_volok" class="footer_info_box_item"><img src="../img/Rectangle 3.png"
+                        alt="Vk"></a>
+
+                <a href="#" class="footer_info_box_item"><img src="../img/Rectangle 3.png" alt="Instagram"></a>
             </div>
-        </section>
+        </div>
     </footer>
 </body>
 
